src/test/ui/const-generics/const_evaluatable_checked/simple_fail.full.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/simple_fail.rs:12:10
   |
LL |     [u8; N - 1]: Sized,
   |          ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: any use of this value will cause an error
  --> $DIR/simple_fail.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
